--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </div>
     </main>
     <footer>
-      <div class="foot">@2023 by Uner Construction</div>
+      <div class="foot">@2023 by Under Construction</div>
     </footer>
   </body>
 </html>
