--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       </div>
       <div class="status">Site nearly raady</div>
       <div class="form">
-        <form action="#">
-          <input type="range" min="0" max="100" />
-        </form>
+        <div class="loading">
+          <div class="load"></div>
+        </div>
         <div class="percent">
           <p>0</p>
           <p>100</p>
